--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <!-- ===== Header ===== -->
   <header>
     <nav>
-      <a href="#about">About</a>
       <a href="#skills">Skills</a>
       <a href="#education">Education</a>
     </nav>
@@ -20,24 +19,14 @@
   <!-- ===== Hero ===== -->
   <section class="hero reveal" id="home">
     <h1>Hey, I'm Sannman 👋</h1>
-    <h3>AIML Student & Tech Enthusiast</h3>
+    <h3>AIML student at HBSU with a passion for building intelligent systems. I explore the intersection of technology and creativity, always learning and pushing boundaries.</h3>
   </section>
 
-  <!-- ===== About ===== -->
-  <section id="about" class="reveal">
-    <h2>About Me</h2>
-    <p>
-      I'm a B.Sc (Hons.) student in Artificial Intelligence & Machine Learning at HBSU.  
-      Super curious about AI, coding, and building cool stuff that actually matters.  
-      Always leveling up my skills and chasing big goals 🚀.
-    </p>
-  </section>
-
-  <!-- ===== Skills ===== -->
   <section id="skills" class="reveal">
     <h2>Skills</h2>
     <div class="card-container">
-      <div class="card">Python</div>
+      <div class="card stagger">Python</div>
+      
     </div>
   </section>
 
@@ -45,15 +34,15 @@
   <section id="education" class="reveal">
     <h2>Education</h2>
     <div class="card-container">
-      <div class="card">
+      <div class="card stagger">
         <h3>HBSU</h3>
         <p>B.Sc (Hons.) in Artificial Intelligence & Machine Learning</p>
       </div>
-      <div class="card">
+      <div class="card stagger">
         <h3>Elphinstone</h3>
         <p>12th (Higher Secondary)</p>
       </div>
-      <div class="card">
+      <div class="card stagger">
         <h3>CKT</h3>
         <p>10th (Secondary School)</p>
       </div>
@@ -70,6 +59,6 @@
   </footer>
   </main>
 
-  <script src="script.js"></script>
+  <script src="script.js?v=2"></script>
 </body>
 </html>
